fix: fixed tabs jumping

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -52,6 +52,8 @@
         color: #65558f;
         display: flex;
         align-items: center;
+        border-bottom: 4px solid transparent;
+        transition: .3s ease-out;
         &:hover {
           border-bottom: 4px solid #a982e873;
         }
